# job-application-tracker

./: README.md  docker-compose.yaml  pyproject.toml
backend/: app.py
